--- a/css/szablon.css
+++ b/css/szablon.css
@@ -440,14 +440,17 @@
 }
 
 .number{
-    font-weight: bold;
+    font-weight:700 !important;
 }
 .number1_3{
     color:#d0514d;
 }
 .best-scores{
-    font-family: 'Titillium Web', sans-srif;
-    color:black;
+    font-family: 'Titillium Web', sans-serif;
+
+    font-weight:600 !important;
+
+    color:rgb(51, 51, 51);
 }
 .clickable:hover{
     cursor: pointer;
@@ -466,4 +469,10 @@
 }
 .body{
     font-family: 'Titillium Web', sans-serif;
+}
+.grayBack{
+    position: absolute;
+    height: 360px;
+    width: 100%;
+    background: #f3f3f3;
 }
